[package]
name = "http-status-codes2"
version = "0.1.2"
edition = "2021"
authors = ["Sven Siegmund <sven.siegmund@gmail.com>"]
description = "Library for HTTP status codes"
repository = "https://github.com/fleetingbytes/http-status-codes2/"
documentation = "https://docs.rs/http-status-codes2/"
license-file = "LICENSE"
keywords = ["tools", "http", "documentation"]
categories = ["network-programming"]

[dependencies]
convert_case = "0.6"

